hide overflow of canvasWrapper to fix resize issue

--- a/public/styles/app/index.styl
+++ b/public/styles/app/index.styl
@@ -35,6 +35,7 @@ h1 a
 	display block
 	width 100%
 	height 100%
+	overflow hidden
 
 #canvas
 	display block
