--- a/public/styles/landingpage/quickconvert.styl
+++ b/public/styles/landingpage/quickconvert.styl
@@ -11,6 +11,7 @@
 		width 388px
 		height 300px
 		max-width 100%
+		overflow hidden
 
 	canvas
 		width 388px
